<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".DriverActivity">

<!-- Contenedor Principal -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Barra de herramientas personalizada -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- Diseño lineal para entrada de datos del viaje -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/registerTripTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_trip_title"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <!-- Layout horizontal para el origen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Origen:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <Spinner
                android:id="@+id/originSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/locations_array"
                android:layout_weight="2"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

        <!-- Layout horizontal para el destino -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Destino:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <Spinner
                android:id="@+id/destinationSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/locations_array"
                android:layout_weight="2"/>
        </LinearLayout>

        <EditText
            android:id="@+id/dateTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            android:focusable="false"/>

        <EditText
            android:id="@+id/seatsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seats_hint"
            android:inputType="number"/>

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/directionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direction_hint"
            android:layout_marginTop="8dp"/>

        <!-- Spinner para el estado del viaje -->
        <Spinner
            android:id="@+id/statusSpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:entries="@array/trip_status_options"
            android:layout_marginTop="8dp"/>

        <!-- Botón para registrar el viaje -->
        <Button
            android:id="@+id/registerTripButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_trip"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

<!-- Navegación lateral -->
<com.google.android.material.navigation.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

